some layout bug fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -486,9 +486,9 @@ margin-bottom: 50px;
 .icon-size{
 height: 60px;
 width: 60px;
-margin:5px 5px  5px 0;  
-
+margin:5px 5px  5px 0;
 }
+
 /* .research-topics{
   margin-left: 220px;
   font-weight: bolder;
@@ -514,10 +514,10 @@ margin:5px 5px  5px 0;
 }
 .container-element-properties{
  
-  padding: 25px;
+  padding: 25px 60px;
   margin: 20px 10px;
-  box-sizing: border-box;
- 
+  box-sizing: border-box; 
+  
 
 } 
 .first-span{
@@ -531,9 +531,10 @@ margin:5px 5px  5px 0;
 }
 .fourth-span{
   background-color: rgb(80, 80, 150);
+  padding-right:90px;
+
 }
 
-.container-element-properties
 
 
 /*--------------------------------------------------------------
@@ -579,7 +580,7 @@ Resume...........................
   display: inline-block;
   margin: 0 25px 25px 50px;
   background:rgba(170, 170, 170, 0.237);
-  
+  overflow: hidden;
 }
 .first-card:hover{
   background-color: #18d26e;
